# bat-sh-collection

./: .gitignore  README.md  compileC.bat  compileC.sh  compileCPP.bat  compileCPP.sh  compile_clang++.bat  compile_clang++.sh  compile_clang.bat  compile_clang.sh  main.cpp
1-compilers/: .gitignore  main.c
2-cmake/: CMakeLists.txt  main.cpp
2-cmake-build/: .gitignore  CMakeLists.txt  build-clang-ninja.sh
3-vcpkg/: CMakeLists.txt  main.cpp
cmake/: .gitignore  CMakeLists.txt  delete-build.sh
cmake-building/: .gitignore  README.md  build.sh
compile-shaders/: compile-shaders.bat  compile-shaders.sh
compilers/: compileC.bat
copy-resources/: copy-resources.bat  copy-resources.sh
copy-resources/resources/: resource.txt
run-file/: .gitignore  README.md  run.bat  run.sh
single-file-compile/: README.md  compileC.bat  compileC.sh
single-file-compilers/: README.md  compileCPP.bat  main.c  main.cpp
